out/old/manifests/moodle-v2/Deployment.moodle-debug.yaml
metadata:
  name: moodle-debug
  namespace: moodle-v2
  annotations: {}
spec:
  replicas: 0
  selector:
    matchLabels:
      app: moodle-debug
  template:
    metadata:
      labels:
        app: moodle-debug
    spec:
      volumes:
      - name: moodledata
        persistentVolumeClaim:
          claimName: moodle-moodle
      containers:
      - name: debug
        image: artifactory.<COMPANY><DOMAIN_14>:30807/docker-local/ubuntu:latest
        command:
        - /bin/sh
        args:
        - -c
        - sleep infinity
        resources: {}
        volumeMounts:
        - name: moodledata
          mountPath: /data
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: Always
        stdin: true
        tty: true
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
      - name: secret-registry-image
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
apiVersion: apps/v1
kind: Deployment
