out/old/manifests/moodle-v2/Deployment.moodle.yaml
metadata:
  name: moodle
  namespace: moodle-v2
  labels:
    app.kubernetes.io/instance: moodle
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: moodle
    helm.sh/chart: moodle-10.0.0
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["<IP_72>"],"port":80,"protocol":"HTTP","serviceName":"moodle-v2:moodle-expose-http","ingressName":"moodle-v2:moodle-ingress","hostname":"training.<COMPANY_DOMAIN>","path":"/","allNodes":false}]'
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: moodle
      app.kubernetes.io/name: moodle
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: moodle
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: moodle
        helm.sh/chart: moodle-10.0.0
      annotations:
        prometheus.io/port: '9117'
        prometheus.io/scrape: 'true'
    spec:
      volumes:
      - name: moodle-data
        persistentVolumeClaim:
          claimName: moodle-moodle
      - name: time-zone
        hostPath:
          path: /usr/share/zoneinfo/Asia/Ho_Chi_Minh
          type: ''
      containers:
      - name: moodle
        image: artifactory.<COMPANY><DOMAIN_14>:30807/docker-local/moodle:3.10.0-debian-10-r5
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        - name: https
          containerPort: 8443
          protocol: TCP
        resources: {}
        volumeMounts:
        - name: moodle-data
          mountPath: /bitnami/moodle
          subPath: moodle
        - name: moodle-data
          mountPath: /bitnami/moodledata
          subPath: moodledata
        - name: time-zone
          mountPath: /etc/localtime
        livenessProbe:
          httpGet:
            path: /login/<DOMAIN_8>
            port: http
            scheme: HTTP
          initialDelaySeconds: 2400
          timeoutSeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 6
        readinessProbe:
          httpGet:
            path: /login/<DOMAIN_8>
            port: http
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 3
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsUser: 1001
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/hostname: <CLEANUP_HOST_4>
      securityContext:
        fsGroup: 1001
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/instance: moodle
                  app.kubernetes.io/name: moodle
              namespaces:
              - moodle-v2
              topologyKey: <DOMAIN_138>/hostname
      schedulerName: default-scheduler
      hostAliases:
      - ip: 127.0.0.1
        hostnames:
        - <DOMAIN_698>
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
apiVersion: apps/v1
kind: Deployment
