out/old/manifests/moodle-v2/StatefulSet.moodle-mariadb.yaml
metadata:
  name: moodle-mariadb
  namespace: moodle-v2
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: moodle
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mariadb
    helm.sh/chart: mariadb-9.0.1
  annotations: {}
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: primary
      app.kubernetes.io/instance: moodle
      app.kubernetes.io/name: mariadb
  template:
    metadata:
      labels:
        app.kubernetes.io/component: primary
        app.kubernetes.io/instance: moodle
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: mariadb
        helm.sh/chart: mariadb-9.0.1
      annotations:
        checksum/configuration: 581cf5683a60bfd85f1fe8ef00b21322479e1080f8d5653ddc488f217822c867
    spec:
      volumes:
      - name: config
        configMap:
          name: moodle-mariadb
          defaultMode: 420
      containers:
      - name: mariadb
        image: artifactory.<COMPANY><DOMAIN_14>:30807/docker-local/moodle/mariadb:10.5.8-debian-10-r0
        ports:
        - name: mysql
          containerPort: 3306
          protocol: TCP
        resources: {}
        volumeMounts:
        - name: data
          mountPath: /bitnami/mariadb
        - name: config
          mountPath: /opt/bitnami/mariadb/conf/<DOMAIN_752>
          subPath: <DOMAIN_752>
        livenessProbe:
          exec:
            command:
            - /bin/bash
            - -ec
            - "password_aux=\"${MARIADB_ROOT_PASSWORD:-}\"\nif [[ -f \"${MARIADB_ROOT_PASSWORD_FILE:-}\"\
              \ ]]; then\n    password_aux=$(cat \"$MARIADB_ROOT_PASSWORD_FILE\")\n\
              fi\nmysqladmin status -uroot -p\"${password_aux}\"\n"
          initialDelaySeconds: 120
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          exec:
            command:
            - /bin/bash
            - -ec
            - "password_aux=\"${MARIADB_ROOT_PASSWORD:-}\"\nif [[ -f \"${MARIADB_ROOT_PASSWORD_FILE:-}\"\
              \ ]]; then\n    password_aux=$(cat \"$MARIADB_ROOT_PASSWORD_FILE\")\n\
              fi\nmysqladmin status -uroot -p\"${password_aux}\"\n"
          initialDelaySeconds: 30
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsUser: 1001
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/hostname: <CLEANUP_HOST_4>
      serviceAccountName: moodle-mariadb
      serviceAccount: moodle-mariadb
      securityContext:
        fsGroup: 1001
      imagePullSecrets:
      - name: registrypullsecret
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/component: primary
                  app.kubernetes.io/instance: moodle
                  app.kubernetes.io/name: mariadb
              namespaces:
              - moodle-v2
              topologyKey: <DOMAIN_138>/hostname
      schedulerName: default-scheduler
  volumeClaimTemplates:
  - kind: PersistentVolumeClaim
    apiVersion: v1
    metadata:
      name: data
      labels:
        app.kubernetes.io/component: primary
        app.kubernetes.io/instance: moodle
        app.kubernetes.io/name: mariadb
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 100Gi
      storageClassName: ceph-block-replica-2
      volumeMode: Filesystem
  serviceName: moodle-mariadb
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
  revisionHistoryLimit: 10
apiVersion: apps/v1
kind: StatefulSet
