out/old/manifests/moodle-v2/Service.moodle-expose-http.yaml
metadata:
  name: moodle-expose-http
  namespace: moodle-v2
  annotations: {}
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: moodle
    app.kubernetes.io/name: moodle
  clusterIP: <IP_80>
  type: ClusterIP
  sessionAffinity: <REDACTED:env>
apiVersion: v1
kind: Service
