out/old/manifests/moodle-v2/Service.moodle-mariadb.yaml
metadata:
  name: moodle-mariadb
  namespace: moodle-v2
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: moodle
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mariadb
    helm.sh/chart: mariadb-9.0.1
  annotations: {}
spec:
  ports:
  - name: mysql
    protocol: TCP
    port: 3306
    targetPort: 3306
  selector:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: moodle
    app.kubernetes.io/name: mariadb
  clusterIP: <IP_81>
  type: ClusterIP
  sessionAffinity: <REDACTED:env>
apiVersion: v1
kind: Service
