out/old/manifests/moodle-v2/Ingress.moodle-ingress.yaml
metadata:
  name: moodle-ingress
  namespace: moodle-v2
  labels:
    app: moodle
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["<IP_72>"],"port":80,"protocol":"HTTP","serviceName":"moodle-v2:moodle-expose-http","ingressName":"moodle-v2:moodle-ingress","hostname":"training.<COMPANY_DOMAIN>","path":"/","allNodes":false}]'
    ingress.kubernetes.io/app-root: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
spec:
  rules:
  - host: training.<COMPANY_DOMAIN>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: moodle-expose-http
            port:
              number: 8080
apiVersion: <DOMAIN_775>/v1
kind: Ingress
